2011-02-13  Mike Frysinger  <vapier@gentoo.org>

	* gas/bfin/arithmetic.d, gas/bfin/parallel.d, gas/bfin/parallel3.d,
	gas/bfin/vector.d, gas/bfin/vector2.d: Add ".L" to dsp mult insns.

2011-02-13  Mike Frysinger  <vapier@gentoo.org>

	* gas/bfin/video.d, gas/bfin/video.s, gas/bfin/video2.d,
	gas/bfin/video2.s: Remove BYTEOP2M insns.

2011-02-10  Kai Tietz  <kai.tietz@onevision.com>

	* gas/cfi/cfi-x86_64.d: Adjust for x64 PE+.

2011-02-10  Vincent Rivière  <vincent.riviere@freesbee.fr>

	* gas/m68k/cpu32.d: Set explicit architecture for objdump.
	* gas/m68k/mcf-coproc.d: Likewise.
	* gas/m68k/mcf-wdebug.d: Likewise.

2011-02-10  Alan Modra  <amodra@gmail.com>

	* gas/elf/dwarf2-4.s: Don't use @.

2011-02-08  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/6957
	* gas/i386/nops-1-i686.d: Updated.
	* gas/i386/nops-3-i686.d: Likewise.
	* gas/i386/nops-4-i686.d: Likewise.

2011-02-08  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/i386/i386.exp: Run nops-4a-i686 and nops-6.

	* gas/i386/nops-4a-i686.d: New.
	* gas/i386/nops-6.d: Likewise.
	* gas/i386/nops-6.s: Likewise.

2011-02-07  Vincent Riviere  <vincent.riviere@freesbee.fr>

	PR gas/3041
	* gas/m68k/p3041pcrel.s, * gas/m68k/p3041pcrel.d: New test.
	* gas/m68k/all.exp: Add "p3041pcrel" and enable p3041 tests for
	all m68k-aout targets.

2011-02-04  Bernd Schmidt  <bernds@codesourcery.com>

	* gas/tic6x/dir-junk.l: Remove tests for .atomic and .noatomic.
	* gas/tic6x/dir-junk.s: Likewise.
	* gas/tic6x/insns-c674x-bad.d: Remove test.
	* gas/tic6x/insns-c674x-bad.l: Likewise.
	* gas/tic6x/insns-c674x-bad.s: Likewise.
	* gas/tic6x/insns-atomic.d: Remove "-matomic" switch.

2011-01-31  Nick Clifton  <nickc@redhat.com>

	* gas/all/align.d: Skip for the RX.
	* gas/elf/group1a.d: Likewise.
	* gas/elf/groupautoa.d: Likewise.
	* gas/elf/elf.exp: Do not run section5 test for the RX port.
	* gas/elf/section4.d: Likewise.
	* gas/elf/section7.d: Likewise.
	* gas/macros/semi.s: Fill with a non-zero pattern.