@@ -1,5 +1,9 @@
 2011-02-13  Mike Frysinger  <vapier@gentoo.org>
 
+	* gas/bfin/arithmetic.d, gas/bfin/parallel.d: Change A0 to A1.
+
+2011-02-13  Mike Frysinger  <vapier@gentoo.org>
+
 	* gas/bfin/arithmetic.d, gas/bfin/parallel.d, gas/bfin/parallel3.d,
 	gas/bfin/vector.d, gas/bfin/vector2.d: Add ".L" to dsp mult insns.
 
